--- a/backend/.env_example
+++ b/backend/.env_example
@@ -1,5 +1,5 @@
-# In terminal, see `echo $ADMIN` to see the value of ADMIN
-# In terminal, see `echo $ADMIN_PASS` to see the value of ADMIN_PASS
-# In terminal, export ADMIN=value
-# In terminal, export ADMIN_PASS=value
-# In terminal, export PORT=value
+# echo $ADMIN to see the value of ADMIN
+# echo $ADMIN_PASS to see the value of ADMIN_PASS
+# export ADMIN=
+# export ADMIN_PASS=
+# export PORT=
