--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 enron_mail_20110402/
 .env
 .terraform/
+.terraform.lock.hcl
+terraform.tfstate
+terraform.tfstate.backup
+*.Identifier
+my-key
+my-key.pub
